--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon Marketing Services | Horiseon.com </title>
 </head>
-<!-- header-->
+<!-- header and navigation section -->
 <body>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,14 +24,18 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </div>
     <!-- hero-->
     <div class="hero"></div>
     <!-- main content-->
     
     <div class="content">
-    <!-- services content-->
+    <!-- main content-->
+<main>
+    <!-- services content - SEO -->
+
+
 
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -40,6 +44,8 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
+
+    <!-- services content - Online Reputation Management -->
         <div id="online-reputation-management" class="online-reputation-management" alt="reputation management">
             <img src="./assets/images/online-reputation-management.jpg" alt="reputation management icons" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -47,6 +53,9 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
+
+    
+    <!-- services content - Social Media Marketing -->    
         <div id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="social media marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
@@ -58,6 +67,8 @@
 
      <!-- benefits content -->
     <div class="benefits">
+
+    <!-- benefits - Lead Generation -->
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="lead generation icon"/>
@@ -65,6 +76,8 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
+
+    <!-- benefits - Brand Awareness -->   
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="brand awareness icon" />
@@ -72,6 +85,8 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
+
+    <!-- benefits - Cost Managemnet -->   
         <div class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="cost management icon"></img>
@@ -80,13 +95,14 @@
             </p>
         </div>
     </div>
+</main>
     <!-- footer content-->
-    <div class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2021 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>>
 </body>
 
 </html>
