--- a/Develop/index.html
+++ b/Develop/index.html
@@ -46,7 +46,7 @@
         </div>
 
     <!-- services content - Online Reputation Management -->
-        <div id="online-reputation-management" class="online-reputation-management" alt="reputation management">
+        <div id="online-reputation-management" class="float right" alt="reputation management">
             <img src="./assets/images/online-reputation-management.jpg" alt="reputation management icons" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -56,7 +56,7 @@
 
     
     <!-- services content - Social Media Marketing -->    
-        <div id="social-media-marketing" class="social-media-marketing">
+        <div id="social-media-marketing" class="float left">
             <img src="./assets/images/social-media-marketing.jpg" alt="social media marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -64,7 +64,7 @@
             </p>
         </div>
     </div>
-
+</main>
      <!-- benefits content -->
     <div class="benefits">
 
@@ -95,7 +95,7 @@
             </p>
         </div>
     </div>
-</main>
+
     <!-- footer content-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
