--- a/index.html
+++ b/index.html
@@ -34,11 +34,8 @@
     <!-- main content-->
 <main>
     <!-- services content - SEO -->
-
-
-
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+        <section id="search-engine-optimization">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="seo image feature" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -46,7 +43,7 @@
         </div>
 
     <!-- services content - Online Reputation Management -->
-        <div id="online-reputation-management" class="float right" alt="reputation management">
+        <section id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="reputation management icons" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -56,7 +53,7 @@
 
     
     <!-- services content - Social Media Marketing -->    
-        <div id="social-media-marketing" class="float left">
+        <section id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="social media marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -65,36 +62,34 @@
         </div>
     </div>
 </main>
-     <!-- benefits content -->
-    <div class="benefits">
+  
 
-    <!-- benefits - Lead Generation -->
-        <div class="benefit-lead">
+    <!-- benefits  -->
+    <aside>
+        <div>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="lead generation icon"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-
-    <!-- benefits - Brand Awareness -->   
-        <div class="benefit-brand">
+        <div>
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="brand awareness icon" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-
-    <!-- benefits - Cost Managemnet -->   
-        <div class="benefit-cost">
+   
+        <div>
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="cost management icon"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </aside>
+    
 
     <!-- footer content-->
     <footer>
