--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <title>Horiseon Marketing Services | Horiseon.com </title>
 </head>
 <!-- header and navigation section -->
-<body>
-    <div class="header">
+<header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
@@ -25,7 +24,7 @@
                 </li>
             </ul>
         </nav>
-    </div>
+    </header>
     <!-- hero-->
     <div class="hero"></div>
     <!-- main content-->
@@ -33,7 +32,7 @@
     <div class="content">
     <!-- main content-->
 <main>
-    <!-- services content - SEO -->
+    <!-- main services content - SEO -->
         <section id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="seo image feature" />
             <h2>Search Engine Optimization</h2>
@@ -49,7 +48,7 @@
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
+        </section>
 
     
     <!-- services content - Social Media Marketing -->    
@@ -59,7 +58,7 @@
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
+        </section>
     </div>
 </main>
   
@@ -87,7 +86,6 @@
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
     </aside>
     
 
