--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 	<!-- main content-->
 	<main>
 		<!-- services content - SEO -->
-		<section id="search-engine-optimization"> <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="seo image feature" />
+		<section id="search-engine-optimization"> <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="notebook of SEO factors" />
 			<h2>Search Engine Optimization</h2>
 			<p> The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business. </p>
 		</section>
 		<!-- services content - Online Reputation Management -->
-		<section id="online-reputation-management"> <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="reputation management icons" />
+		<section id="online-reputation-management"> <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="graphic representation of reputation management being measured on a laptop" />
 			<h2>Online Reputation Management</h2>
 			<p> The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business. </p>
 		</section>
 		<!-- services content - Social Media Marketing -->
-		<section id="social-media-marketing"> <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social media marketing" />
+		<section id="social-media-marketing"> <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social media marketing team meeting brainstorm" />
 			<h2>Social Media Marketing</h2>
 			<p> Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation. </p>
 		</section>
