--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 	</nav>
 </header>
 <!-- hero-->
-<div class="hero"></div>
-<!-- main content-->
-<div class="content">
+<section class="hero"></section>
 	<!-- main content-->
 	<main>
 		<!-- services content - SEO -->
@@ -43,23 +41,23 @@
 	</main>
 	<!-- benefits  -->
 	<aside>
-		<div>
+		<figure>
 			<h3>Lead Generation</h3> <img src="./assets/images/lead-generation.png" alt="lead generation icon" />
 			<p> Inbound strategies for lead generation require less work for your business, bringing customers directly to your website. </p>
-		</div>
-		<div>
+		</figure>
+		<figure>
 			<h3>Brand Awareness</h3> <img src="./assets/images/brand-awareness.png" alt="brand awareness icon" />
 			<p> Users find your business through paid and organic searches, increasing the search ranking and visibility for your business. </p>
-		</div>
-		<div>
+		</figure>
+		<figure>
 			<h3>Cost Management</h3> <img src="./assets/images/cost-management.png" alt="cost management icon"></img>
 			<p> As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page. </p>
-	</aside>
+		</figure>
+		</aside>
 	<!-- footer content-->
 	<footer>
-		<h2>Made with ❤️️ by Horiseon</h2>
-		<p> &copy; 2021 Horiseon Social Solution Services, Inc. </p>
+		<h4>Made with ❤️️ by Horiseon</h4>
+		<p> &copy; 2021 Horiseon Social Solution Services, Inc.</p>
 	</footer>
 	</body>
-
 </html>
